Fix svg sizing issue on safari!

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,19 @@
     color: var(--md-sys-color-on-surface);
 }
 
+/* This is for setting svg auto size correctly on safari*/
+.svg-wrapper {
+    height: 3vh;
+    width: 3vw;
+}
+
+@media (max-width: 700px) {
+    .svg-wrapper {
+        height: 3vh;
+        width: 5vw;
+    }
+}
+
 #root {
     height: 100vh;
     width: 100vw;
