--- a/src/session/search-box/SearchBox.css
+++ b/src/session/search-box/SearchBox.css
@@ -22,6 +22,5 @@
 }
 
 .search-icon {
-    height: 3vh;
     margin-left: 0.5rem;
 }
