--- a/src/session/search-box/SearchResult.css
+++ b/src/session/search-box/SearchResult.css
@@ -25,10 +25,6 @@
     width: 30%;
 }
 
-.plus-icon {
-    height: 3vh;
-}
-
 @media (max-width: 700px) {
     .search-results {
         width: 80%;
